# gedlib

./: CMakeLists.txt  README.md  check_iso.py  gedlib_compression_example.ipynb  install.py  run.sh
compression/: .gitignore  CMakeLists.txt  README.md  README.txt  adapt_to_server.py  copy_server.sh  create_directories.sh  prepare_server.sh  run.sh  run_one_edge.sh  setup.py
compression/back up/: arborescence_based_compression.cpp  compression_2020_06_21_16_15.cpp  compression_test_2020_06_22_21_32.cpp  compression_test_2020_07_01_18_19.cpp  compression_test_2020_07_02_13_59.cpp  compression_test_2020_07_03_18_11.cpp  compression_test_2020_07_09_10_31.cpp  compression_test_2020_08_26.cpp  edit_graph_2020_06_10_20_15.cpp  edit_graph_2020_06_13_16_23.cpp  edit_graph_2020_06_15_14_26.cpp  edit_graph_2020_06_17_18_55.cpp  registers_2020_07_15.cpp  registers_2020_07_21.cpp  registers_2020_07_24.cpp  registers_2020_08_09.cpp  registers_2020_08_12.cpp  registers_2020_08_14.cpp  registers_2020_08_15.cpp  registers_2020_08_21.cpp  results_compression.csv  run.sh  run_2020_06_22_21_32.sh
compression/back up/Lucas_test_2020_08_12/: Lucas.collection  results_compression.csv
compression/back up/Lucas_test_2020_08_12/decoded/: Lucas.xml  g4.gxl  g7.gxl  hg11.gxl  xg2.gxl  zag9.gxl  zg1.gxl  zg8.gxl
compression/back up/Lucas_test_2020_08_12/encoded/: hg11.gxl_coded_10.graph  xg2.gxl_coded_1.graph  zag9.gxl_coded_8.graph
compression/data/collections/: Letter-50p.xml  Letter_100g.xml  Letter_10g.xml  Letter_A_H.xml  Letter_A_W.xml  Letter_A_X.xml  Letter_A_Z.xml  Letter_five.xml  Letter_mixed.xml  Letter_one.xml  Letter_three.xml  Letter_two.xml  Lucas_test (copy).xml  Lucas_test.xml  Mutagenicity_fake.xml  Mutagenicity_sample.xml  Mutagenicity_sample_long.xml  Mutagenicity_sample_short.xml  Mutagenicity_sample_very_short.xml  Mutagenicity_sample_very_very_short.xml  Protein_short.xml
compression/data/datasets/Lucas_test/: ag10.gxl  dg5.gxl  g1.gxl  g10.gxl  g11.gxl  g12.gxl  g2.gxl  g3.gxl  g4.gxl  g5.gxl  g6.gxl  g7.gxl  g8.gxl  g9.gxl  gg0.gxl  gg1.gxl  sdg12.gxl  zg8.gxl
compression/data/from_server/: _comp_cost_one_edge.csv  _comp_cost_one_edge_old.csv  alphabets.data  comp_cost_one_edge (1).csv  comp_cost_one_edge (1).ods  comp_cost_one_edge (2).csv  comp_cost_one_edge (2).ods  get_server.sh  graph2.gxl  graph3.gxl  molecule1.txt  molecule2.txt  results_compilation.csv  results_compression.csv  results_compression_muta.csv  results_compression_muta_local.csv  results_compression_muta_server.csv  results_compression_new_1.csv  results_compression_new_2.csv  results_compression_relaxed.csv  results_compression_server_muta_aids.csv  results_compression_server_partial.csv  results_compression_test.csv  results_compression_test_letters.csv  results_compression_test_parallel (copy).csv  results_compression_test_parallel.csv  results_refinement_server_1.csv
compression/data/from_server/AIDS/: AIDS.collection  AIDS.info_file
compression/data/from_server/Letter/: Letter.collection  Letter.info_file
compression/data/from_server/Lucas/: Lucas.collection  Lucas.info_file
compression/data/from_server/Mutagenicity/: Mutagenicity.collection  Mutagenicity.info_file
compression/data/output/: graph1.gxl  graph2.gxl
compression/data/test_collections/: collections_list.txt  collections_list_AIDS.txt  collections_list_Letter.txt  collections_list_Letter_Protein.txt  collections_list_Protein.txt  collections_list_Protein_short.txt  collections_list_acyclic.txt  collections_list_all.txt  collections_list_fast.txt  collections_list_letters.txt  collections_list_letters_only.txt  collections_list_mao.txt  collections_list_muta.txt  collections_list_muta_AIDS.txt  collections_list_muta_short.txt  collections_list_no_muta.txt  collections_list_pah.txt  collections_list_slow.txt  collections_list_small.txt  collections_list_train_ring.txt  dataset.txt  dataset_Letter_Protein.txt  dataset_all.txt  dataset_fast.txt  dataset_muta_AIDS.txt  dataset_muta_short.txt  dataset_no_muta.txt  dataset_slow.txt  graphs_dir_list.txt  graphs_dir_list_AIDS.txt  graphs_dir_list_Letter.txt  graphs_dir_list_Letter_Protein.txt  graphs_dir_list_Protein.txt  graphs_dir_list_acyclic.txt  graphs_dir_list_all.txt  graphs_dir_list_fast.txt  graphs_dir_list_letters.txt  graphs_dir_list_letters_only.txt  graphs_dir_list_mao.txt  graphs_dir_list_muta.txt  (+9 more)
compression/data/training/: ring_.data  ring_GAMMA_Letter-100g.data  ring_GAMMA_Letter-500g.data  ring_GAMMA_Letter-50g.data  ring_LSAPE_GREEDY_Letter-100g.data  ring_LSAPE_GREEDY_Letter-500g.data  ring_LSAPE_GREEDY_Letter-50g.data  ring_LSAPE_OPTIMAL.data  ring_LSAPE_OPTIMAL_Letter-100g.data  ring_LSAPE_OPTIMAL_Letter-500g.data  ring_LSAPE_OPTIMAL_Letter-50g.data
compression/ext/atofigh/: edmonds_optimum_branching.hpp  edmonds_optimum_branching_impl.hpp
compression/ext/stock_msts/: README.md  graphs_gxl.py  interpret_json.py  mst.py  mstEvolve.py  mstweb.py  requirements.txt  us_data_to_csv.py
compression/median/: Makefile  cmake_install.cmake
compression/run_files/: check_iso.py  run.sh  run_old.sh  run_old1.sh  run_old2.sh  run_old3.sh  run_old4.sh  run_registers.sh  run_train_ring.sh
compression/src/: CMakeLists.txt  Makefile  arborescence_based_compression.cpp  arborescence_based_compression.hpp  cmake_install.cmake  compression_test.cpp  compression_test_one_edge.cpp  hello.cpp  mao_arb_k_67.csv  misc_letter.py  misc_lucas.py  registers.cpp  test  test.cpp  train_ring.cpp
compression/tests/: Makefile  README.md  README.txt  cmake_install.cmake  compression_test.cpp
compression/tests/sspr2018/: Makefile  cmake_install.cmake
compression/tests/tkde2019/: Makefile  cmake_install.cmake
compression/tests/unit_tests/: Makefile  cmake_install.cmake
compression/tests/vldbj2020/: Makefile  cmake_install.cmake
compression/util_files/: box_big.sh  box_msts.sh  box_small.sh  check_iso.py  clean_folders.sh  compress_tar.sh  copy_graphs.py  line_big.sh  line_msts.sh  line_small.sh  run.sh  run_2.sh  run_all.sh  run_msts.sh  run_small.sh  star.sh
(+30884 files in other folders)
