############################################################################
#                                                                          #
#   Copyright (C) 2018 by David B. Blumenthal                              #
#                                                                          #
#   This file is part of GEDLIB.                                           #
#                                                                          #
#   GEDLIB is free software: you can redistribute it and/or modify it      #
#   under the terms of the GNU Lesser General Public License as published  #
#   by the Free Software Foundation, either version 3 of the License, or   #
#   (at your option) any later version.                                    #
#                                                                          #
#   GEDLIB is distributed in the hope that it will be useful,              #
#   but WITHOUT ANY WARRANTY; without even the implied warranty of         #
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the           #
#   GNU Lesser General Public License for more details.                    #
#                                                                          #
#   You should have received a copy of the GNU Lesser General Public       #
#   License along with GEDLIB. If not, see <http://www.gnu.org/licenses/>. #
#                                                                          #
############################################################################


add_executable(${EXEC_NAME} compression_test.cpp)

#SHARED LIBRARY
target_link_libraries(

        ${EXEC_NAME}
		
#		${GEDLIB}/lib/libgxlgedlib.so
        ${FANN_HOME}/lib/libdoublefann.so.2.2.0
		${LIBSVM_HOME}/libsvm.so
		${NOMAD_HOME}/lib/libnomad.so
)
